# sketchy_recogniser

./: .dockerignore  .gitignore  Dockerfile  README.md  client.py  client_c  main.py  pyproject.toml  requirements.txt  venc_installer.sh  venv_installer.bat  venv_installer.sh  venv_local_installer.bat
assets/: training_history.csv
core/: cnn.py  core.py  handler.py
data/: __init__.py  data_downloader.py  kaggle_data_prep.py  list_of_objects.txt
src/: cnn.py  core.py  handler.py
src/clients/: client.c  client.cs  client.py
src/data/: kaggle_data_prep.py
